--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,10 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+#youtube-player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
